# telos-libc

./: config.sub
newlib/: configure.host
newlib/libc/sys/: configure  configure.in
newlib/libc/sys/telos/: Makefile.am  Makefile.in  _exit.c  alarm.c  aligned_alloc.c  chdir.c  clock.c  close.c  closedir.c  configure  crt0.s  dir.c  dup.c  dup2.c  environ.c  error.h  execve.c  fcntl.c  fork.c  getpid.c  gettimeofday.c  ioctl.c  isatty.c  kill.c  link.c  lseek.c  mkdir.c  mknod.c  mmap.c  mount.c  nanosleep.c  open.c  opendir.c  pipe.c  pread.c  pwrite.c  read.c  readdir.c  rename.c  rmdir.c  (+18 more)
